--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -22,11 +22,23 @@
     background-color: #ffffff;
 }
 
-.contact-box .contact-icon{
+.contact-box .contac-icon{
     border-right: 5px dashed #FEAA36;
     border-bottom: 5px solid #FEAA36;
     display: inline-block;
     margin-bottom: 30px;
     padding: 25px;
     border-radius: 50%;
+}
+.contact-box h3{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.contact-box p{
+    font-weight: 400;
+    line-height: 26px;
+    padding: 0 0 15px;
+    font-size: 16px;
+    margin: 0;
 }
