--- a/src/Layouts/About/About.css
+++ b/src/Layouts/About/About.css
@@ -22,6 +22,14 @@
     display: flex;
     justify-content: end;
 }
+
+.w-70{
+    width: 70%;
+}
+.w-80{
+    width: 80%;
+}
+
 @media screen and (max-width: 1200px) {
     .Aboutcontent p{
         width: 90%;
