--- a/src/Layouts/NavigationBar/NavigationBar.css
+++ b/src/Layouts/NavigationBar/NavigationBar.css
@@ -1,6 +1,10 @@
 .navigationBar ul{
     display: flex;
 }
+.navigationBar ul li{
+    display: flex;
+    line-height: 1.2;
+}
 .navigationBar ul li a{
     padding: 0 13px;
     font-weight: 600;
@@ -12,12 +16,14 @@
 }
 
 #sticky{
-    position: sticky;
-    top: 0;
+    position: fixed;
+    top: 0px;
     z-index: 99;
     background: #fff !important;
-    transition: all .5s ease-in;
+    transition: all .3s ease-in;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    width: 100%;
+    height: 55px;
 }
 
 @media screen and (max-width: 992px) {
@@ -46,7 +52,7 @@
 }
 
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1144px){
     .w-115{
         width: 100px;
     }
