--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -33,12 +33,16 @@
 .contact-box h3{
     font-size: 18px;
     font-weight: 400;
+    text-transform: uppercase;
 }
 
 .contact-box p{
     font-weight: 400;
     line-height: 26px;
-    padding: 0 0 15px;
     font-size: 16px;
     margin: 0;
+}
+
+.contact-box p a{
+    color: #FEAA36;
 }
