--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -28,6 +28,15 @@
     color: #000;
     text-transform: capitalize;
 }
+.card-wrapper .discription hr{
+    border: solid #DADADA;
+}
+.card-wrapper .discription hr.line{
+    border-color: #007167;
+    border-width: 1px;
+    width: 60px;
+    margin: 10px auto 30px;
+}
 .card-wrapper button{
     padding: 9px 30px;
 }
