--- a/src/Layouts/NavigationBar/NavigationBar.css
+++ b/src/Layouts/NavigationBar/NavigationBar.css
@@ -20,7 +20,7 @@
     top: 0px;
     z-index: 99;
     background: #fff !important;
-    transition: all .3s ease-in;
+    transition: all .3s ease-in-out;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     width: 100%;
     height: 55px;
