--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -5,28 +5,30 @@
     background-position: bottom;
     padding-bottom: 4rem;
 }
-.card-wrapper .card{
-  position: relative;
-  border-radius: 25px;
-  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-  border: none;
+.card-wrapper{
+    padding-bottom: 15px;
+    width: 85%;
 }
 .card img{
     width: 100%;
     position: relative;
 }
+.card-main{
+    padding: 0 95px;
+}
 .card-wrapper .discription{
-    position: absolute;
-    transform: translate(-50%,-50%);
-    bottom: 0;
-    left: 50%;
+    max-width: 275px;
+    margin: auto;
+    position: relative;
+    margin-top: -161px;
+    top: -14px;
+    padding-bottom: 5px;
     text-align: center;
-    width: 100%;
-    z-index: 10;
 }
 .card-wrapper .discription h2{
     color: #000;
     text-transform: capitalize;
+    text-align: center;
 }
 .card-wrapper .discription hr{
     border: solid #DADADA;
@@ -39,6 +41,7 @@
 }
 .card-wrapper button{
     padding: 9px 30px;
+    line-height: 20px;
 }
 .card-wrapper button:hover{
     background: #fff;
@@ -48,6 +51,13 @@
 }
 .card-wrapper button:hover a{
     color: #FEAA36;
+}
+.card-wrapper .card{
+    position: relative;
+    border-radius: 25px;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    border: none;
+    height: 100%;
 }
 .card:hover::before{
     content: '';
@@ -60,6 +70,9 @@
 }
 .card:hover h2{
     color: #fff;
+}
+.card:hover .discription{
+    z-index: 10;
 }
 
 .card:hover:nth-child(1)::before{
@@ -99,20 +112,16 @@
         font-size: 1.2rem;
     }
 }
-
 .card-main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-row-gap: 2em;
-    place-items: center;
-}
-.card-wrapper{
-    width: 72%;
+    grid-gap: 3em;
 }
 
 @media screen and (max-width: 992px) {
     .card-main{
         grid-template-columns: repeat(2,1fr);
+        grid-gap: 3em;
     }
 }
 
