--- a/src/Utils/utils.css
+++ b/src/Utils/utils.css
@@ -32,6 +32,7 @@ body{
 .section-title{
     font-size: 2.2rem;
     font-weight: 400;
+    line-height: 27;
 }
 .section-subtitle{
     font-size: 1.5rem;
