--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -28,7 +28,8 @@
 .card-wrapper .discription h2{
     color: #000;
     text-transform: capitalize;
-    text-align: center;
+    min-height: 56px;
+    line-height: 27px;
 }
 .card-wrapper .discription hr{
     border: solid #DADADA;
