--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -5,16 +5,12 @@
     background-position: bottom;
     padding-bottom: 4rem;
 }
+.card-main{
+    padding: 0 95px;
+}
 .card-wrapper{
     padding-bottom: 15px;
     width: 85%;
-}
-.card img{
-    width: 100%;
-    position: relative;
-}
-.card-main{
-    padding: 0 95px;
 }
 .card-wrapper .discription{
     max-width: 275px;
@@ -58,16 +54,16 @@
     border-radius: 25px;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     border: none;
-    height: 100%;
 }
 .card:hover::before{
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     z-index: 5;
+    bottom: 0;
 }
 .card:hover h2{
     color: #fff;
@@ -75,7 +71,10 @@
 .card:hover .discription{
     z-index: 10;
 }
-
+.card img{
+    width: 100%;
+    position: relative;
+}
 .card:hover:nth-child(1)::before{
     background-image: url('../../assets/Media/ser1.png');
     background-position: center;
