--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -55,7 +55,13 @@
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     border: none;
 }
-/* .card:hover::before{
+.card:hover:nth-child(1) img{
+    content: url('../../assets/Media/ser1.png');
+}
+.card:hover:nth-child(2) img{
+    content: url('../../assets/Media/ser2.png');
+}
+.card:hover::before{
     content: "";
     position: absolute;
     width: 100%;
@@ -64,7 +70,7 @@
     left: 0;
     z-index: 5;
     bottom: 0;
-} */
+}
 .card:hover h2{
     color: #fff;
 }
@@ -74,39 +80,11 @@
 .card img{
     width: 100%;
     position: relative;
+    border-radius: 10px;
 }
 
-/* .card:hover:nth-child(1)::before{
-    background-image: url('../../assets/Media/ser1.png');
-    background-position: center;
-    background-size: cover;
-}
-.card:hover:nth-child(2)::before{
-    background-image: url('../../assets/Media/ser2.png');
-    background-position: center;
-    background-size: cover;
-} */
-/* .card:nth-child(3):hover::before{
-    background-image: url('../../assets/Media/ser3.png');
-    background-position: center;
-    background-size: cover;
-}
-.card:hover:nth-child(4)::before{
-    background-image: url('../../assets/Media/ser4.png');
-    background-position: center;
-    background-size: cover;
-}
-.card:nth-child(5):hover::before{
-    background-image: url('../../assets/Media/ser5.png');
-    background-position: center;
-    background-size: cover;
-}
-.card:nth-child(6):hover::before{
-    background-image: url('../../assets/Media/ser6.png');
-    background-position: center;
-    background-size: cover;
-} */
 
+/*-------- responsive --------- */
 @media screen and (max-width: 1200px) {
     .card .section-subtitle{
         padding: 0;
