--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -7,10 +7,13 @@
 }
 .card-main{
     padding: 0 95px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
 }
 .card-wrapper{
-    padding-bottom: 15px;
-    width: 85%;
+    padding-bottom: 50px;
+    width: 75%;
 }
 .card-wrapper .discription{
     max-width: 275px;
@@ -27,15 +30,16 @@
     min-height: 56px;
     line-height: 27px;
 }
-.card-wrapper .discription hr{
-    border: solid #DADADA;
-}
 .card-wrapper .discription hr.line{
     border-color: #007167;
     border-width: 1px;
     width: 60px;
     margin: 10px auto 30px;
 }
+.card-wrapper .discription hr{
+    border: solid #DADADA;
+}
+
 .card-wrapper button{
     padding: 9px 30px;
     line-height: 20px;
@@ -76,36 +80,27 @@
 .card:hover .discription{
     z-index: 10;
 }
+
 /*-- set image when hover on card --*/
-.card:hover:nth-child(1) img{
+.cd-1:hover img{
     content: url('../../assets/Media/ser1.png');
 }
-.card:hover:nth-child(2) img{
+.cd-2:hover img{
     content: url('../../assets/Media/ser2.png');
 }
-
-/*-------- responsive --------- */
-@media screen and (max-width: 1200px) {
-    .card .section-subtitle{
-        padding: 0;
-        font-size: 1.2rem;
-    }
+.cd-3:hover img{
+    content: url('../../assets/Media/ser3.png');
 }
-.card-main{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap: 3em;
+.cd-4:hover img{
+    content: url('../../assets/Media/ser4.png');
 }
-
-@media screen and (max-width: 992px) {
-    .card-main{
-        grid-template-columns: repeat(2,1fr);
-        grid-gap: 3em;
-    }
+.cd-5:hover img{
+    content: url('../../assets/Media/ser5.png');
+}
+.cd-6:hover img{
+    content: url('../../assets/Media/ser6.png');
 }
 
-@media screen and (max-width: 768px) {
-    .card-main{
-        grid-template-columns: repeat(1,1fr);
-    }
-}
+
+
+
