--- a/src/Utils/utils.css
+++ b/src/Utils/utils.css
@@ -61,3 +61,13 @@ body{
     color: #000;
 }
 
+/*-- hr tag style -- */
+hr.line{
+    border-color: #007167;
+    border-width: 1px;
+    width: 60px;
+    margin: 10px auto 30px;
+}
+.line{
+    border: solid #DADADA;
+}
