--- a/src/Layouts/banner/Banner.css
+++ b/src/Layouts/banner/Banner.css
@@ -23,6 +23,9 @@
 .banner .bannerDes button:hover{
    background: #fff;
 }
+.banner .bannerDes .button:hover a{
+    color: #FEAA36;
+}
 
 @media screen and (max-width: 768px) {
     .banner .bannerDes{
