--- a/src/Utils/utils.css
+++ b/src/Utils/utils.css
@@ -19,7 +19,7 @@ ul{
     list-style: none;
     padding: 0px !important;
 }
- a,link{
+ a{
     text-decoration: none !important;
     color: #000;
 }
@@ -28,7 +28,8 @@ body{
     scroll-behavior: smooth;
     transition: all .3s ease-in-out;
 }
-/*-- common class --- */
+
+/*------- common class ------- */
 .section-title{
     font-size: 2.2rem;
     font-weight: 400;
@@ -62,7 +63,9 @@ body{
 .button:hover a{
     color: #FEAA36;
 }
-
+.button:hover{
+    color: #FEAA36;
+}
 /*-- hr tag style -- */
 hr.line{
     width: 60px;
