--- a/src/Layouts/Service/Service.css
+++ b/src/Layouts/Service/Service.css
@@ -91,6 +91,32 @@
     content: url('../../assets/Media/ser6.png');
 }
 
+/*---- responsive ----- */
+@media screen and (max-width: 1200px) {
+    .card-wrapper{
+        width: 90%;
+    }
+    .card-wrapper .discription{
+        top: 0;
+    }
+    .card-wrapper .discription h2{
+        font-size: 1.3rem;
+        padding: 0;
+    }
+    .card-wrapper .discription .line{
+        margin: 5px auto 30px
+    }
+}
 
+@media screen and (max-width: 992px) {
+    .card-main{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+}
 
-
+@media screen and (max-width: 768px) {
+    .card-main{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
